
[TestNoUnsafeMemberAccessRule/invalid-0 - 1]
Diagnostic 1: unsafeMemberExpression (3:5 - 3:5)
Message: Unsafe member access .a on an `any` value.
   2 | function foo(x: any) {
   3 |   x.a;
     |     ~
   4 | }
---

[TestNoUnsafeMemberAccessRule/invalid-1 - 1]
Diagnostic 1: unsafeMemberExpression (3:5 - 3:5)
Message: Unsafe member access .a on an `any` value.
   2 | function foo(x: any) {
   3 |   x.a.b.c.d.e.f.g;
     |     ~
   4 | }
---

[TestNoUnsafeMemberAccessRule/invalid-2 - 1]
Diagnostic 1: unsafeMemberExpression (3:7 - 3:7)
Message: Unsafe member access .b on an `any` value.
   2 | function foo(x: { a: any }) {
   3 |   x.a.b.c.d.e.f.g;
     |       ~
   4 | }
---

[TestNoUnsafeMemberAccessRule/invalid-3 - 1]
Diagnostic 1: unsafeMemberExpression (3:5 - 3:7)
Message: Unsafe member access ['a'] on an `any` value.
   2 | function foo(x: any) {
   3 |   x['a'];
     |     ~~~
   4 | }
---

[TestNoUnsafeMemberAccessRule/invalid-4 - 1]
Diagnostic 1: unsafeMemberExpression (3:5 - 3:7)
Message: Unsafe member access ['a'] on an `any` value.
   2 | function foo(x: any) {
   3 |   x['a']['b']['c'];
     |     ~~~
   4 | }
---

[TestNoUnsafeMemberAccessRule/invalid-5 - 1]
Diagnostic 1: unsafeMemberExpression (4:7 - 4:14)
Message: Unsafe member access .property on an `error` typed value.
   3 | 
   4 | value.property;
     |       ~~~~~~~~
   5 |       
---

[TestNoUnsafeMemberAccessRule/invalid-6 - 1]
Diagnostic 1: unsafeComputedMemberAccess (3:5 - 3:5)
Message: Computed name [y] resolves to an `any` value.
   2 | function foo(x: { a: number }, y: any) {
   3 |   x[y];
     |     ~
   4 | }
---

[TestNoUnsafeMemberAccessRule/invalid-7 - 1]
Diagnostic 1: unsafeComputedMemberAccess (3:7 - 3:7)
Message: Computed name [y] resolves to an `any` value.
   2 | function foo(x?: { a: number }, y: any) {
   3 |   x?.[y];
     |       ~
   4 | }
---

[TestNoUnsafeMemberAccessRule/invalid-8 - 1]
Diagnostic 1: unsafeComputedMemberAccess (3:5 - 3:12)
Message: Computed name [(y += 1)] resolves to an `any` value.
   2 | function foo(x: { a: number }, y: any) {
   3 |   x[(y += 1)];
     |     ~~~~~~~~
   4 | }
---

[TestNoUnsafeMemberAccessRule/invalid-9 - 1]
Diagnostic 1: unsafeComputedMemberAccess (3:5 - 3:12)
Message: Computed name [1 as any] resolves to an `any` value.
   2 | function foo(x: { a: number }, y: any) {
   3 |   x[1 as any];
     |     ~~~~~~~~
   4 | }
---

[TestNoUnsafeMemberAccessRule/invalid-10 - 1]
Diagnostic 1: unsafeComputedMemberAccess (3:5 - 3:7)
Message: Computed name [y()] resolves to an `any` value.
   2 | function foo(x: { a: number }, y: any) {
   3 |   x[y()];
     |     ~~~
   4 | }
---

[TestNoUnsafeMemberAccessRule/invalid-11 - 1]
Diagnostic 1: unsafeComputedMemberAccess (3:5 - 3:5)
Message: Computed name [y] resolves to an `any` value.
   2 | function foo(x: string[], y: any) {
   3 |   x[y];
     |     ~
   4 | }
---

[TestNoUnsafeMemberAccessRule/invalid-12 - 1]
Diagnostic 1: unsafeComputedMemberAccess (3:5 - 3:5)
Message: Computed name [y] resolves to an `error` typed value.
   2 | function foo(x: { a: number }, y: NotKnown) {
   3 |   x[y];
     |     ~
   4 | }
---

[TestNoUnsafeMemberAccessRule/invalid-13 - 1]
Diagnostic 1: unsafeThisMemberExpression (4:17 - 4:23)
Message: Unsafe member access .methodB on an `any` value. `this` is typed as `any`.
Help: You can try to fix this by turning on the `noImplicitThis` compiler option, or adding a `this` parameter to the function.
   3 |   methodA() {
   4 |     return this.methodB()
     |                 ~~~~~~~
   5 |   },

Diagnostic 2: unsafeThisMemberExpression (8:17 - 8:29)
Message: Unsafe member access [getProperty()] on an `any` value. `this` is typed as `any`.
Help: You can try to fix this by turning on the `noImplicitThis` compiler option, or adding a `this` parameter to the function.
   7 |     const getProperty = () => Math.random() > 0.5 ? 'methodB' : 'methodC'
   8 |     return this[getProperty()]()
     |                 ~~~~~~~~~~~~~
   9 |   },

Diagnostic 3: unsafeThisMemberExpression (14:19 - 14:25)
Message: Unsafe member access .methodA on an `any` value. `this` is typed as `any`.
Help: You can try to fix this by turning on the `noImplicitThis` compiler option, or adding a `this` parameter to the function.
  13 |   methodD() {
  14 |     return (this?.methodA)?.()
     |                   ~~~~~~~
  15 |   }
---

[TestNoUnsafeMemberAccessRule/invalid-14 - 1]
Diagnostic 1: unsafeMemberExpression (5:25 - 5:33)
Message: Unsafe member access .subscribe on an `any` value.
   4 |   getPopularDepartments(): void {
   5 |     this.getObs$.pipe().subscribe(res => {
     |                         ~~~~~~~~~
   6 |       log(res);

Diagnostic 2: unsafeMemberExpression (5:18 - 5:21)
Message: Unsafe member access .pipe on an `any` value.
   4 |   getPopularDepartments(): void {
   5 |     this.getObs$.pipe().subscribe(res => {
     |                  ~~~~
   6 |       log(res);
---

[TestNoUnsafeMemberAccessRule/invalid-15 - 1]
Diagnostic 1: unsafeMemberExpression (4:15 - 4:19)
Message: Unsafe member access .inner on an `any` value.
   3 | 
   4 | value?.middle.inner;
     |               ~~~~~
   5 |       
---

[TestNoUnsafeMemberAccessRule/invalid-16 - 1]
Diagnostic 1: unsafeMemberExpression (4:14 - 4:19)
Message: Unsafe member access .middle on an `any` value.
   3 | 
   4 | value?.outer.middle.inner;
     |              ~~~~~~
   5 |       
---

[TestNoUnsafeMemberAccessRule/invalid-17 - 1]
Diagnostic 1: unsafeMemberExpression (4:21 - 4:25)
Message: Unsafe member access .inner on an `any` value.
   3 | 
   4 | value.outer?.middle.inner;
     |                     ~~~~~
   5 |       

Diagnostic 2: unsafeMemberExpression (4:7 - 4:11)
Message: Unsafe member access .outer on an `any` value.
   3 | 
   4 | value.outer?.middle.inner;
     |       ~~~~~
   5 |       
---

[TestNoUnsafeMemberAccessRule/invalid-18 - 1]
Diagnostic 1: unsafeMemberExpression (4:7 - 4:11)
Message: Unsafe member access .outer on an `any` value.
   3 | 
   4 | value.outer.middle?.inner;
     |       ~~~~~
   5 |       
---

[TestNoUnsafeMemberAccessRule/invalid-19 - 1]
Diagnostic 1: unsafeComputedMemberAccess (3:5 - 3:5)
Message: Computed name [y] resolves to an `error` typed value.
   2 | function foo(x: { a: number }, y: NotKnown) {
   3 |   x[y];
     |     ~
   4 | }
---
